baml_language/crates/baml_tests/snapshots/compiles/function_call/baml_tests__compiles__function_call__02_parser__function_call.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "Bar"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            PATTERN_ALT "let x"
              KW_LET "let"
              WORD "x"
          EQUALS "="
          CALL_EXPR
            WORD "Foo"
            CALL_ARGS "(1)"
              L_PAREN "("
              INTEGER_LITERAL "1"
              R_PAREN ")"
          SEMICOLON ";"
        WORD "x"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "Foo"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "x"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        BINARY_EXPR "x + 1"
          WORD "x"
          PLUS "+"
          INTEGER_LITERAL "1"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "GreetBaz"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "n"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            PATTERN_ALT "let baz"
              KW_LET "let"
              WORD "baz"
          EQUALS "="
          OBJECT_LITERAL
            WORD "Baz"
            L_BRACE "{"
            OBJECT_FIELD "name: n"
              WORD "name"
              COLON ":"
              WORD "n"
            R_BRACE "}"
          SEMICOLON ";"
        CALL_EXPR
          PATH_EXPR "baz.Greeting"
            WORD "baz"
            DOT "."
            WORD "Greeting"
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Baz"
    L_BRACE "{"
    FIELD
      WORD "name"
      TYPE_EXPR "string"
        WORD "string"
    FUNCTION_DEF
      KW_FUNCTION "function"
      WORD "Greeting"
      PARAMETER_LIST
        L_PAREN "("
        PARAMETER "self"
          WORD "self"
        R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "string"
        WORD "string"
      EXPR_FUNCTION_BODY
        BLOCK_EXPR
          L_BRACE "{"
          BINARY_EXPR
            BINARY_EXPR
              STRING_LITERAL "Hello, "
                QUOTE """
                WORD "Hello"
                COMMA ","
                QUOTE """
              PLUS "+"
              PATH_EXPR "self.name"
                WORD "self"
                DOT "."
                WORD "name"
            PLUS "+"
            STRING_LITERAL "!"
              QUOTE """
              NOT "!"
              QUOTE """
          R_BRACE "}"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "param_in_if_statement"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "b"
        COLON ":"
        TYPE_EXPR "bool"
          WORD "bool"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        IF_EXPR
          KW_IF "if"
          PAREN_EXPR "(b)"
            L_PAREN "("
            WORD "b"
            R_PAREN ")"
          BLOCK_EXPR "{ 1 }"
            L_BRACE "{"
            INTEGER_LITERAL "1"
            R_BRACE "}"
          KW_ELSE "else"
          BLOCK_EXPR "{ 2 }"
            L_BRACE "{"
            INTEGER_LITERAL "2"
            R_BRACE "}"
        R_BRACE "}"

=== ERRORS ===
None
